Fix rosidl_generator_java_warnings
Signed-off-by: Ivan Santiago Paunovic <ivanpauno@ekumenlabs.com>